--- a/less/media.less
+++ b/less/media.less
@@ -1671,6 +1671,10 @@
             margin-right: 0;
         }
     }
+
+    .footer-item--contact {
+        flex-basis: 230px;
+    }
 }
 
 @media screen and (max-width: 400px) {
