--- a/less/style.less
+++ b/less/style.less
@@ -2111,6 +2111,7 @@ textarea {
 
 }
 
+
 .footer-item {
     flex-basis: 232px;
     color: #FFFFFF; 
@@ -2153,7 +2154,7 @@ textarea {
             background-color: #fff;
         }
         &--item {
-            margin-bottom: 14px;
+            margin-bottom: 25px;
         }
         &--last {
             margin-top: 11px;
@@ -2161,6 +2162,7 @@ textarea {
     }
 
     &__link {
+        display: block;
         font-size: 12px;
         color: #FFFFFF; 
         margin-bottom: 8px;
