--- a/css/assistant.css
+++ b/css/assistant.css
@@ -26,7 +26,8 @@
   top: -132%;
   background: rgba(0, 150, 235, 0.7);
   border-radius: 28px;
-  transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+  -webkit-transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+          transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
 }
 .header-decorate img {
   display: none;
@@ -123,9 +124,14 @@
 }
 .about-content {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .about-text {
   text-align: justify;
@@ -141,10 +147,17 @@
   margin-top: 25px;
 }
 .forms-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .about-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   z-index: 999;
 }
@@ -160,13 +173,22 @@
   margin-bottom: 40px;
 }
 .check-universe__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 65%;
 }
 .check-universe__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-right: 20px;
 }
 .check-universe__btn {
@@ -176,7 +198,8 @@
   text-transform: uppercase;
   color: #fff;
   background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 18.5px;
   font-size: 20px;
   text-align: center;
@@ -189,7 +212,9 @@
 .check-universe__list {
   width: 100%;
   margin: 5px 0;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
 }
 .check-universe__list::before {
@@ -197,7 +222,8 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-60%, 0);
+  -webkit-transform: translate(-60%, 0);
+          transform: translate(-60%, 0);
   height: 3px;
   background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
   width: 100%;
@@ -211,7 +237,8 @@
   border-radius: 50%;
   left: -20px;
   top: 50%;
-  transform: translate(-50%, -4px);
+  -webkit-transform: translate(-50%, -4px);
+          transform: translate(-50%, -4px);
   background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%);
 }
 .top-active::before {
@@ -233,10 +260,16 @@
   top: 85%;
 }
 .universe-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .universe-items--ukraine {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .universe-items--russia {
@@ -250,7 +283,8 @@
   position: relative;
   padding: 25px 9px 7px;
   background: #FFFFFF;
-  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
   border-radius: 18px;
   max-width: 95px;
 }
@@ -260,14 +294,16 @@
   top: -14px;
   left: 50%;
   opacity: 0;
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 .universe-item::after {
   content: url('../img/icons/arrows-asisstent-bottom.svg');
   position: absolute;
   left: 50%;
   bottom: -18px;
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
   opacity: 0;
 }
 .universe-item__title {
@@ -348,8 +384,12 @@
 }
 .comments__wrap {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .comments {
   width: 60%;
@@ -368,11 +408,17 @@
   border-top-right-radius: 24px;
   border-bottom-right-radius: 24px;
   border-bottom-left-radius: 24px;
-  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
   border: 1px solid #ccc;
   background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .comment-item--question::before {
   content: '';
@@ -460,6 +506,8 @@
   margin-bottom: 0;
 }
 .commetns-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   z-index: 999;
 }
