--- a/less/style.less
+++ b/less/style.less
@@ -7,6 +7,11 @@
 body {
     min-height: 100vh;
     min-height: -webkit-fill-available;
+    padding:
+    env(safe-area-inset-top, 20px);
+    env(safe-area-inset-right, 20px);
+    env(safe-area-inset-bottom, 20px);
+    env(safe-area-inset-left, 20px);
   }
 
   
