--- a/css/media.css
+++ b/css/media.css
@@ -1211,10 +1211,6 @@
   .container {
     width: 100%;
     padding: 0 20px;
-    padding-right: env(safe-area-inset-right, 20px);
-    padding-left: env(safe-area-inset-left, 20px);
-    padding-left: constant(safe-area-inset-left, 20px);
-    padding-right: constant(safe-area-inset-right, 20px);
   }
   .header--sticky .logo--header img {
     height: 25px;
@@ -1446,6 +1442,15 @@
   .footer-item--contact {
     -ms-flex-preferred-size: 230px;
         flex-basis: 230px;
+  }
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2) {
+  .container {
+    padding-right: env(safe-area-inset-right);
+    padding-left: env(safe-area-inset-left);
+    padding-left: constant(safe-area-inset-left);
+    padding-right: constant(safe-area-inset-right);
+    padding: 0 20px;
   }
 }
 @media screen and (max-width: 400px) {
