--- a/less/media.less
+++ b/less/media.less
@@ -1416,14 +1416,9 @@
     .container {
         width: 100%;
         padding: 0 20px;
-
-        // iPhone 10 fix
-        padding-right: env(safe-area-inset-right, 20px);
-        padding-left: env(safe-area-inset-left, 20px);
-        // iPhone 10 Pro fix
-        padding-left: constant(safe-area-inset-left, 20px);
-        padding-right: constant(safe-area-inset-right, 20px);
     }
+
+    
 
     .header--sticky {
         .logo--header img {
@@ -1681,6 +1676,16 @@
 
     .footer-item--contact {
         flex-basis: 230px;
+    }
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 2){
+    .container {
+        padding-right: env(safe-area-inset-right);
+        padding-left: env(safe-area-inset-left);
+        padding-left: constant(safe-area-inset-left);
+        padding-right: constant(safe-area-inset-right);
+        padding: 0 20px;
     }
 }
 
