--- a/less/media.less
+++ b/less/media.less
@@ -1679,7 +1679,7 @@
     }
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 2){
+@media screen and (max-width: 570px)  and (-webkit-min-device-pixel-ratio: 2){
     .container {
         padding-right: env(safe-area-inset-right);
         padding-left: env(safe-area-inset-left);
